solar-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-ingress
  labels:
    app: solar-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: solar.cloud4azureaws.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar1-system-service
            port:
              number: 80
  tls:
  - hosts:
    - solar1.cloud4azureaws.link
    secretName: solar1-secret
